# ai-pdf-seal

./: .gitignore  LICENSE  README.md  config.yaml  main.py  main_gui.py  pyproject.toml
.trae/documents/: ai-pdf-seal-implementation-plan.md
.trae/rules/: project_rules.md
.trae/skills/generate-test-files/: SKILL.md
.trae/skills/run-program/: SKILL.md
.trae/specs/config-file/: checklist.md  spec.md  tasks.md
.trae/specs/gui界面/: checklist.md  spec.md  tasks.md
.trae/specs/logging-support/: checklist.md  spec.md  tasks.md
.trae/specs/pdf-batch-seal/: checklist.md  spec.md  tasks.md
.trae/specs/pdf-image-stamp/: checklist.md  spec.md  tasks.md
.trae/specs/pdf-seal-tool/: checklist.md  spec.md  tasks.md
.trae/specs/pyinstaller-packaging/: checklist.md  spec.md  tasks.md
src/: pdf_processor.py
