[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pdf-seal"
version = "0.1.0"
description = "一个用于对 PDF 文件批量添加图片印章的工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pypdf>=3.0.0",
    "Pillow>=9.0.0",
    "reportlab>=4.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
ai-pdf-seal = "main:main"
